src/mesa/main/mtypes.h
@@ -44,6 +44,7 @@
 #include "math/m_matrix.h"	/* GLmatrix */
 #include "compiler/shader_enums.h"
 #include "main/formats.h"       /* MESA_FORMAT_COUNT */
+#include "compiler/glsl/list.h"
 
 
 #ifdef __cplusplus
@@ -2769,6 +2770,13 @@ struct gl_shader_program
     */
    unsigned NumUniformRemapTable;
    struct gl_uniform_storage **UniformRemapTable;
+
+   /**
+    * Sometimes there are empty slots left over in UniformRemapTable after we
+    * allocate slots to explicit locations. This list stores the blocks of
+    * continuous empty slots inside UniformRemapTable.
+    */
+   struct exec_list EmptyUniformLocations;
 
    /**
     * Size of the gl_ClipDistance array that is output from the last pipeline
